k8s_entrega_3/credit-cards-deployment.yaml
# App service
apiVersion: v1
kind: Service
metadata:
  name: credit-cards-app-service
spec:
  type: ClusterIP
  selector:
    app: credit-cards-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000

---
# App deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-cards-app-deployment
  labels:
    app: credit-cards-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credit-cards-app
  template:
    metadata:
      labels:
        app: credit-cards-app
    spec:
      containers:
        - name: credit-cards-app
          image: 381492016771.dkr.ecr.us-east-1.amazonaws.com/credit_cards_app:3.0.0
          ports:
          - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /credit-cards/ping
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 5
