k8s_entrega_3/users-app-deployment.yaml
# App service
apiVersion: v1
kind: Service
metadata:
  name: users-app-service
spec:
  type: ClusterIP
  selector:
    app: users-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
# App deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app-deployment
  labels:
    app: users-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
        - name: users-app
          image: 381492016771.dkr.ecr.us-east-1.amazonaws.com/users_app:3.0.0
          ports:
          - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /users/ping
              port: 3000
            initialDelaySeconds: 5 
            periodSeconds: 30
            failureThreshold: 3
