k8s_entrega_3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-app-service
                port:
                  number: 80
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notifications-app-service
                port:
                  number: 80
          - path: /native
            pathType: Prefix
            backend:
              service:
                name: service-truenative
                port:
                  number: 80  
          - path: /credit-cards
            pathType: Prefix
            backend:
              service:
                name: credit-cards-app-service
                port:
                  number: 80
